# sphinx-social-previews

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  readthedocs.yml  test_previews.py  tox.ini
.github/workflows/: tests.yml
docs/: conf.py  examples.md  index.md  test_previews.py  use.md
docs/reference/: example.md
docs/script/: test_previews.py
sphinx_social_previews/: __init__.py  card.py
sphinx_social_previews/_static/: social-card.html  sphinx-social-previews.css
